# api-rust-models-local

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DOCUMENTACION_MODELOS.md  Dockerfile  QWEN.md  README.md  docker-compose.yml  llama-server.Dockerfile  run.sh
.qwen/: settings.json
api/: .dockerignore  .env.example  Cargo.toml  Dockerfile
api/layer-streamer/: Cargo.toml  build.rs
api/layer-streamer/src/: dequantize.rs  forward.rs  gguf_parser.rs  gpu_forward.rs  gpu_ops.rs  gpu_pipeline.rs  gpu_tensor.rs  layer_loader.rs  layer_prefetcher.rs  layer_splitter.rs  lib.rs  main.rs  metadata.rs  rope.rs  sampler.rs  tensor.rs  tokenizer.rs  vulkan_context.rs
api/layer-streamer/src/shaders/: activation.comp  matmul.comp  rms_norm.comp
api/layer-streamer/src/shaders/spv/: activation.spv  matmul.spv  rms_norm.spv
api/src/: config.rs  error.rs  inference.rs  main.rs  state.rs
api/src/engine/: llama.rs  mod.rs
api/src/middleware/: auth.rs  mod.rs
api/src/routes/: audio.rs  chat.rs  health.rs  image.rs  mod.rs  models.rs  vision.rs
docs/: API-CONSUME.md  API.md  ARQUITECTURA.md  CROSS-PLATFORM.md  DEPLOY.md  GEMMA4-MULTIMODAL.md  MODELS.md  MULTI-MODEL.md  NATIVE-DEPLOY.md  STATUS.md  TURBOQUANT.md  VISION-API.md  VISION-WEBSOCKET-BATCH.md
examples/: test-vision-api.py  vision-realtime.html  vision-template.html
llama-server/: .dockerignore  Dockerfile
llama-server/patches/: apply-turboquant.py  apply.sh  ggml-turboquant.c  ggml-turboquant.h
models/: README.md  models.json
scripts/: benchmark.sh  build-api.sh  build-llama-server.sh  download-model.sh  health-check.sh  install-native.sh  scan-models.sh  serve-ui.py  start-all.sh  start-llama-server.sh  start-streaming.sh  switch-model.sh
scripts/macos/: build-api.sh  build-llama-server.sh  start-llama-server.sh
scripts/windows/: build-api.bat  build-llama-server.bat  download-model.bat  start-llama-server.bat
src/: config.rs  error.rs  main.rs  state.rs
src/engine/: llama.rs
src/middleware/: auth.rs
src/routes/: chat.rs  mod.rs  models.rs
systemd/: llama-server.service  llm-api.service
