[package]
name = "layer-streamer"
version = "0.1.0"
edition = "2021"
description = "GGUF layer splitter for low-VRAM inference - AirLLM-style layer-by-layer streaming"

[[bin]]
name = "layer-streamer"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
ash = "0.38"
gpu-alloc = "0.6"
gpu-alloc-ash = "0.7"
bytemuck = "1.16"
